# itnsa

./: .env_simple  .gitignore  README.md  config.py  hello.py  pyproject.toml  requirements.txt
itnsa/: __init__.py  commands.py  models.py
itnsa/admin/: __init__.py  forms.py  nav.py  views.py
itnsa/admin/templates/: header.html  message.html  navbar.html
itnsa/admin/views/: __init__.py  auth.py  main.py  traininglog.py
itnsa/auth/: __init__.py  forms.py  views.py
itnsa/common/: __init__.py  service.py  views.py
itnsa/main/: views.py
itnsa/note/: __init__.py  views.py
itnsa/service/: user_service.py
itnsa/static/css/: style.css
itnsa/templates/: _formhelpers.html  base.html  footer.html  form.html  header.html  navbar.html
itnsa/templates/auth/: login.html  nav.html  profile.html  register.html  roles.html  users.html
itnsa/templates/main/: about.html  index.html
itnsa/templates/note/: list_folders.html  view_note.html  view_readme.html
itnsa/templates/pages/: about.html  index.html
itnsa/templates/traininglog/: list.html  list.html-上下布局  stats.html  traininglogs.html  upload.html  view.html
itnsa/traininglog/: __init__.py  forms.py  views.py
itnsa/upload/: __init__.py  forms.py  views.py
migrations/versions/: 0e18746fcd43_修改了用户的详情页模型.py  4bada20df431_init.py  60d727045598_init.py  9467fa694b55_加入了trainning_logs表.py  961d4dd7fb62_添加string的长度限制预以满足mysql的要求.py  9d47800ba99c_调整日志评价表字段user_id可以为空.py  d3318a9859d5_init.py  da5f88a957aa_修改了traininglogevaluation的大小写的问题.py  ede8373f5244_add_traininglogmodules_and_.py
utils/: gen_seckey.py
(+22 files in other folders)
